<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/clock_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/clock_default"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_default"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clock_label" />

    <ImageView
        android:id="@+id/eventIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_label"
        app:srcCompat="@drawable/ic_event"
        android:contentDescription="@string/imgdesc_event" />

    <TextView
        android:id="@+id/eventLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/event_null"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/eventIcon"
        app:layout_constraintTop_toBottomOf="@+id/date_label" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventIcon"
        app:srcCompat="@drawable/ic_wi_day_sunny"
        android:contentDescription="@string/imgdesc_weather"/>

    <TextView
        android:id="@+id/weatherLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/weather_null"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/weatherIcon"
        app:layout_constraintTop_toBottomOf="@+id/eventLabel" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherIcon"
        app:srcCompat="@drawable/ic_wi_dust"
        android:contentDescription="@string/imgdesc_dust"/>

    <TextView
        android:id="@+id/dustLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dustNull"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/weatherLabel" />

    <!-- 레이아웃을 버튼 형태로 사용 (3개) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/storeMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:onClick="storeOnClick"
        app:layout_constraintEnd_toStartOf="@+id/readerMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dustLabel">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:contentDescription="@string/imgdesc_storeIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_handbag" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/mainStore"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/readerMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="12sp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:onClick="readerOnClick"
        app:layout_constraintEnd_toStartOf="@+id/internetMenu"
        app:layout_constraintStart_toEndOf="@+id/storeMenu"
        app:layout_constraintTop_toBottomOf="@+id/dustLabel">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:contentDescription="@string/imgdesc_mainViewerIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_book_open" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/mainBookReader"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/internetMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="12sp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:onClick="browserOnClick"
        app:layout_constraintEnd_toStartOf="@+id/settingsMenu"
        app:layout_constraintStart_toEndOf="@+id/readerMenu"
        app:layout_constraintTop_toBottomOf="@+id/dustLabel">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:contentDescription="@string/imgdesc_netIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_globe_alt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/netIntro"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="24sp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:onClick="settingsOnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/internetMenu"
        app:layout_constraintTop_toBottomOf="@+id/dustLabel">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:contentDescription="@string/imgdesc_settingsIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/mainSettings"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:id="@+id/mainApps"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/mainBottomMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeMenu"></TableLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/mainBottomMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="#FFFFFF"
        app:elevation="0dp"
        app:itemIconTint="@color/colorGray"
        app:itemTextColor="@color/btm_nav_color"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/main_bottom_menu"
        app:itemHorizontalTranslationEnabled="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>